--- a/src/navbar/navbar.css
+++ b/src/navbar/navbar.css
@@ -29,6 +29,7 @@
 .suggestions {
     box-sizing: border-box;
     position: absolute;
+    z-index: 2;
 
     left: 7vw;
 
